Se permite obtener todos los posts de un usuario
